[package]
name = "yanuntil"
version = "0.1.1"
authors = ["yan"]
edition = "2021"

description = "简单的例子"
keywords = ["untils"]
license = "MIT"
documentation = "https://docs.rs/yanuntil"
# 添加仓库链接
repository = "https://github.com/vonneumann/yanuntil"

readme = "README.md"

categories = ["development-tools"]

[dependencies]
